# remote-job-manager

./: .gitignore  GEMINI.md  README.md  pyproject.toml
examples/: simple_job.yaml
output/horizon/: config.yaml
output/horizon-reduction/: config.yaml
output_nano/: Dockerfile
projects/example-project/: config.yaml
scripts/: forge.sh
src/remote_job_manager/: cli.py  config.py  docker_utils.py  experiment_generator.py  job_launcher.py  permissions.py  remote.py  singularity_utils.py  utils.py  wandb_utils.py  web_utils.py
src/remote_job_manager/scripts/: prepare_remote_test_env.sh
src/remote_job_manager/templates/: Dockerfile copy.template  Dockerfile.template  prepare_remote_test_env.sh  slurm.template  slurm.template.jinja2
templates/: Dockerfile.template  docker-compose.yml.template
